<resources>
    <string name="app_name">ComputerPioneersQuiz</string>

    <string name="welcome_msg">Hello! Welcome to the Quiz</string>

    <string name="question1">1.Who is the father of computer?</string>
    <string name="question2">2.Who is the creator of c++ ?</string>
    <string name="question3">3.Which of the following statements are true?"</string>
    <string name="question4">4.Which of these is not an android verison?"</string>
    <string name="question5">5.Android Kernal is based on Linux</string>

    <string name="q1_option1">Tim Cranmer</string>
    <string name="q1_option2">Charles Babbage</string>
    <string name="q1_option3">Richie Rich</string>
    <string name="q1_option4">John Snow</string>

    <string name="q3_option1">Mark Zuckerberg is the founder of facebook</string>
    <string name="q3_option2">Sebastian Thrun is current CEO of Udemy</string>
    <string name="q3_option3">Jeff Weiner is the current CEO of Linked In</string>
    <string name="q3_option4">Jack Dorsey is the CEO of Twitter</string>

    <string name="q4_option1">Kit Kat</string>
    <string name="q4_option2">Honey Comb</string>
    <string name="q4_option3">Gingerbread</string>
    <string name="q4_option4">Chocopie</string>

    <string name="q5_option1">True</string>
    <string name="q5_option2">False</string>

    <string name="score_message">Your score is %1$d\\5</string>
    <string name="validateAnswers_message">At least one answer is not marked.
        \nPlease mark all the answers.</string>

</resources>
